--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
         android:name=".IfttApplication"
@@ -34,6 +38,35 @@
         <activity
             android:name=".uber.UberShortcutActivity"
             android:theme="@style/styleUberEmpty" />
+        <activity android:name=".tts.TestActivity" />
+
+        <service android:name=".notification.IftttFcmService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <service android:name=".notification.IfttFcmInstanceIdService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".notification.IfttNotificationListenerService"
+            android:permission="android.permission.BIND_NOTIFICATION_LISTENER_SERVICE">
+            <intent-filter>
+                <action android:name="android.service.notification.NotificationListenerService" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".setting.SettingActivity" />
+        <activity android:name=".terminal.TerminalActivity" />
+        <activity android:name=".bleServer.BleServerActivity" />
+        <activity android:name=".bleMiClient.MiClientActivity" />
+
+        <service
+            android:name=".bleMiClient.MiClientUtilitiesService"
+            android:enabled="true"
+            android:exported="true"/>
     </application>
 
 </manifest>
